chore: better api usage